config/ueransim.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    version: v1.0.0
  labels:
    app: free5gc
    name: ueransim
    io.service: ueransim
  name: ueransim
  namespace: free5gc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: free5gc
      name: ueransim
      io.service: ueransim
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        version: v1.0.0
      labels:
        app: free5gc
        name: ueransim
        io.service: ueransim
    spec:
      containers:
        - args:
            - ./nr-gnb
            - -c
            - ./config/gnbcfg.yaml
          image: free5gc/ueransim:latest
          name: ueransim
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /ueransim/config/gnbcfg.yaml
              name: ueransim-cm0
              subPath: gnbcfg.yaml
            - mountPath: /ueransim/config/uecfg.yaml
              name: ueransim-cm1
              subPath: uecfg.yaml
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: gnbcfg.yaml
                path: gnbcfg.yaml
            name: ueransim-cm0
          name: ueransim-cm0
        - configMap:
            items:
              - key: uecfg.yaml
                path: uecfg.yaml
            name: ueransim-cm1
          name: ueransim-cm1
