config/db.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    version: v1.0.0
  labels:
    io.service: db
  name: db
  namespace: free5gc
spec:
  ports:
    - name: "db"
      port: 27017
      targetPort: 27017
  selector:
    io.service: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    version: v1.0.0
  labels:
    io.service: db
  name: db
  namespace: free5gc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
            version: v1.0.0
      labels:
        io.service: db
    spec:
      containers:
        - args:
            - mongod
            - --port
            - "27017"
          image: mongo:3.6.8
          name: mongodb
          ports:
            - containerPort: 27017
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /data/db
              name: dbdata
      restartPolicy: Always
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: dbdata
