config/webui.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    version: v1.0.0
  labels:
    app: free5gc
    name: webui
    io.service: webui
  name: webui
  namespace: free5gc
spec:
  type: NodePort
  ports:
    - name: "webserv"
      port: 5000
      targetPort: 5000
    - name: "ftp2"
      port: 2122
      targetPort: 2122
    - name: "ftp1"
      port: 2121
      targetPort: 2121
    # - name: "80"
    #   port: 5000
    #   NodePort: 80
  selector:
    io.service: webui
    app: free5gc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    version: v1.0.0
  labels:
    app: free5gc
    name: webui
    io.service: webui
  name: webui
  namespace: free5gc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: free5gc
      name: webui
      io.service: webui
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
            version: v1.0.0
      labels:
        app: free5gc
        name: webui
        io.service: webui
    spec:
      containers:
        - args:
            - ./webui
            - -c
            - ./config/webuicfg.yaml
          image: free5gc/webui:latest
          name: webui
          ports:
            - containerPort: 5000
              protocol: TCP
            - containerPort: 2122
              protocol: TCP
            - containerPort: 2121
              protocol: TCP
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
          volumeMounts:
            - mountPath: /free5gc/config/webuicfg.yaml
              name: webui-cm0
              subPath: webuicfg.yaml
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: webuicfg.yaml
                path: webuicfg.yaml
            name: webui-cm0
          name: webui-cm0
